--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
-/* ========== GLOBAL STYLES ========== */
+/* -- global style -- */
 body, html {
   height: 100%;
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Arimo', sans-serif;
 }
 
-/* ========== NAVIGATION ========== */
+/*-- navigation --*/
 nav {
   display: flex;
   justify-content: space-between;
@@ -49,7 +49,7 @@ nav .nav-buttons a:hover {
   color: #004958;
 }
 
-/* ========== HERO SECTION ========== */
+/* -- hero section -- */
 .hero-image {
   background-image: linear-gradient(
     rgba(0, 0, 0, 0.3),
@@ -105,7 +105,7 @@ nav .nav-buttons a:hover {
   color: white;
 }
 
-/* ========== RESPONSIVE (Mobile) ========== */
+/* -- responsive(Mobile) -- */
 @media (max-width: 768px) {
   .hero-image h1 {
     font-size: 2rem;
